--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -451,12 +451,46 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eoY-dQ-AXU">
+                                <rect key="frame" x="0.0" y="0.0" width="844" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="재고 추가" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBM-Yr-vfk">
+                                        <rect key="frame" x="322" y="9.9999999999999982" width="200" height="20.333333333333329"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="iRT-iI-gRQ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKB-J8-ERz">
+                                        <rect key="frame" x="740.33333333333337" y="3" width="53.666666666666629" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="닫기"/>
+                                        <connections>
+                                            <action selector="tappedDismissButton:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="R5L-BK-u1t"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <viewLayoutGuide key="safeArea" id="glj-tb-eqX"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstItem="OBM-Yr-vfk" firstAttribute="centerY" secondItem="eoY-dQ-AXU" secondAttribute="centerY" id="HQt-Xt-plS"/>
+                                    <constraint firstItem="OBM-Yr-vfk" firstAttribute="centerX" secondItem="eoY-dQ-AXU" secondAttribute="centerX" id="Kpw-Tv-gxD"/>
+                                    <constraint firstItem="NKB-J8-ERz" firstAttribute="centerY" secondItem="eoY-dQ-AXU" secondAttribute="centerY" id="hya-KC-Ukl"/>
+                                    <constraint firstAttribute="height" constant="40" id="kUU-3t-Wcw"/>
+                                    <constraint firstAttribute="trailing" secondItem="NKB-J8-ERz" secondAttribute="trailing" constant="50" id="pzo-rc-Cca"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gcO-Xb-kNs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fgr-SK-sT0" firstAttribute="centerX" secondItem="tKV-4l-Vtc" secondAttribute="centerX" id="97W-O0-uy0"/>
+                            <constraint firstItem="eoY-dQ-AXU" firstAttribute="trailing" secondItem="tKV-4l-Vtc" secondAttribute="trailing" id="B9c-Hq-ls3"/>
                             <constraint firstItem="fgr-SK-sT0" firstAttribute="centerY" secondItem="tKV-4l-Vtc" secondAttribute="centerY" id="R5G-e0-7Wq"/>
+                            <constraint firstItem="eoY-dQ-AXU" firstAttribute="top" secondItem="gcO-Xb-kNs" secondAttribute="top" id="Zaf-cD-Nli"/>
+                            <constraint firstItem="eoY-dQ-AXU" firstAttribute="leading" secondItem="tKV-4l-Vtc" secondAttribute="leading" id="zKw-Q3-jgD"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="g4W-fY-l7r"/>
